# Process this file with automake to produce a Makefile.in

#SUBDIRS = icons

#dist_bin_SCRIPTS = \
#	dvrequant \
#	idvid \
#	makedvd \
#	makemenu \
#	makeslides \
#	makevcd \
#	makexml \
#	postproc \
#	previd \
#	tovid \
#	tovid-batch \
#	tovid-init \
#	tovid-interactive \
#	tovid-test

man_MANS = man/*.1
EXTRA_DIST = $(man_MANS) bootstrap

SUBDIRS = src
